assets/styles.css
:root {
  --primary-color: #0a4485; /* Blue */
  --secondary-color: #DE082C; /* Red */
  --accent-color: #BFDBFE; /* Light Blue */
  --blush-color: #ffe7ef; /* Light Red */
  
  --background-color: #f8f9fa; /* Light Gray */
  --text-color: #333333; /* Dark Charcoal */

  --success-color: #28a745; /* Green */
  --danger-color: #dc3545; /* Red */
  --warning-color: #ffc107; /* Yellow */

  --gray-color: #5A5A5A; /* Gray */
  --white-color: #FFFFFF; /* White */
  --blue-color: #007BFF;  /* Blue */
}
/* Global Styles */
.body-style {
  font-family: 'Segoe UI', Tahoma, sans-serif;
  background-color: var(--background-color);
  margin: 0;
  padding: 0;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
}

.app-container {
  display: flex;
  flex-direction: row;
  margin-top: 60px;
}

/* Header Styles */
.header {
  position: fixed;
  top: 0;
  width: 100%;
  background: linear-gradient(90deg, var(--accent-color) 0%, var(--secondary-color) 100%);
  height: 50px;
  display: flex;
  color: #ffffff;
  z-index: 1050;
  align-items: center;
  padding-left: 20px;
  justify-content: space-between;
  padding-right: 20px;
}

.header-brand {
  font-family: 'Segoe UI', sans-serif;
  font-weight: 500;
  font-size: 1.25rem;
  color: var(--primary-color);
  margin: 0;
}

.header-profile {
  display: flex;
  align-items: center;
}

.profile-pic {
  border-radius: 50%;
  width: 40px;
  height: 40px;
  margin-right: 8px;
}

.profile-name {
  color: #ffffff;
  white-space: nowrap;
}

/* Sidebar Styles */
.sidebar {
  position: fixed;
  top: 60px;
  left: 0;
  bottom: 0;
  padding: 10px;
  background-color: white;
  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.1);
  overflow-y: auto;
  width: 180px;
  transition: width 0.3s ease;
  z-index: 999; /* Ensure it's above the content */
  text-align: left; /* Default text alignment */
}

.sidebar[style*="width: 60px;"] {
  width: 60px;
  text-align: center; /* Center text within the sidebar container */
}

.sidebar-toggle-button {
  background: none;
  border: none;
  color: var(--primary-color);
  cursor: pointer;
  margin-bottom: 20px;
  font-weight: bold;
  text-align: left;
  width: 100%;
  padding: 5px;
  display: flex;
  align-items: center;
  justify-content: flex-start;
}

.sidebar[style*="width: 60px;"] .sidebar-toggle-button {
  justify-content: center;
}

.sidebar[style*="width: 60px;"] .sidebar-toggle-button span {
  display: block;
  text-align: center;
  font-size: 1.2rem;
}

.navitem {
  padding: 8px 15px; /* vertical padding for better visual balance */
  margin-bottom: 5px;
  cursor: pointer;
  color: var(--primary-color);
  font-weight: 500;
  display: flex;
  align-items: center;
  justify-content: flex-start; /* Default to left alignment when expanded */
  background: none;
  border: none;
  text-align: left;
  width: 100%;
  transition: background-color 0.15s ease-in-out, color 0.15s ease-in-out; /* Smooth transition */
}

/* Updated for DashIconify: */
.navitem svg {  /* Target DashIconify rendered SVG */
  width: 1.2rem; 
  height: auto; 
  margin-right: 20px; /* Space between icon and text when expanded */
  vertical-align: middle;  /* Align vertically with the text */
  display: inline-block;
}

.sidebar[style*="width: 60px;"] .navitem {
  justify-content: left;
  padding: 15px 13px;
}

.sidebar[style*="width: 60px;"] .navitem svg {
  margin-right: 0;
  margin-bottom: 0;
}

.navitem .navitem-text {
  display: inline;
  opacity: 1;
  transition: opacity 0.2s ease;
}

.sidebar[style*="width: 60px;"] .navitem .navitem-text {
  display: none;
  opacity: 0;
}

.sidebar[style*="width: 220px;"] .navitem .navitem-text {
  display: inline;
  opacity: 1;
}

.sidebar[style*="width: 60px;"] .chart-title {
  text-align: center;
  font-size: 0.9rem;
  margin-bottom: 5px;
}

.sidebar[style*="width: 220px;"] .chart-title {
  text-align: left;
  margin-bottom: 10px;
}

.sidebar[style*="width: 60px;"] hr {
  display: none;
}

.sidebar[style*="width: 220px;"] hr {
  display: block;
  border-top: 1px solid var(--primary-color);
  margin: 10px 0;
}

.sidebar, .navitem {
  transition: padding 0.3s ease, width 0.3s ease;
}

/* Hover state for nav items */
.navitem:hover {
  background-color: var(--blush-color);
  color: var(--secondary-color);
  border-radius: 5px;
}

/* Active state for nav items (you'll need JavaScript/callback to manage this) */
.navitem.active {
  position: relative;
  background-color: var(--accent-color);
  color: var(--primary-color);
  font-weight: bold;
  border-radius: 5px;
  padding-left: 1.2rem;
}

.navitem.active::before {
  content: '';
  position: absolute;
  top: 0.5px;
  bottom: 0;
  left: 0;
  width: 5px;
  border-radius: 0;
  background: var(--primary-color);
}


/* Content Styles */
#content {
  margin-top: 5px;
  padding: 15px;
  transition: margin-left 0.4s ease;
  flex-grow: 1;
  margin-left: 220px;
}
#content.collapsed {
  margin-left: 60px;
}

#content.expanded {
  margin-left: 220px;
}
/* Placeholder Card Styles */
.card {
  background: #ffffff;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
  border-radius: 8px;
  padding: 20px;
  text-align: center;
  color: #546778;
  transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
}
.metric-card {
  background: #ffffff;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
  border-radius: 8px;
  padding: 20px;
  text-align: center;
  color: #546778;
}

.card-title {
  font-size: 1.2rem;
  margin-bottom: 10px;
  font-weight: 600;
  color: var(--text-color);
}

.card-value {
  font-size: 2rem;
  font-weight: bold;
  color: var(--primary-color);
}

.card:hover {
  transform: translateY(-5px);
  box-shadow: 0px 6px 6px rgba(0, 0, 0, 0.15);
}

/* Chart Title Styles */
h1.page-title { /* For the main page headings*/
  margin-bottom: 15px !important;
  font-size: 3.5rem;
  font-weight: bold;
  color: var(--primary-color);
  text-align: left;
}

h2.subtitle {
  color: var(--primary-color); 
  font-size: 1.0rem; 
  margin-top: 20px;
  margin-bottom: 10px; 
  font-weight: 600; 
  border-bottom: 2px solid var(--accent-color); 
  padding-bottom: 5px; 
}

h4.chart-title { /* For card title */
  margin-top: 20px !important;
  margin-bottom: 15px !important;
  font-size: 1.25rem;
  font-weight: bold;
  color: var(--primary-color);
  text-align: left;
}

.no-hover {
  transition: none !important;
  box-shadow: none !important;
  transform: none !important;
}

.no-hover:hover {
  box-shadow: none !important;
  transform: none !important;
  cursor: default !important;
}


/* Responsive Design */
@media (max-width: 768px) {
  .app-container {
      flex-direction: column;
      margin-top: 50px; /* Adjust for smaller header */
  }
  .header {
      height: 50px;
  }
  .sidebar {
      position: static;
      width: 100%;
      top: auto;
      left: auto;
      bottom: auto;
      box-shadow: none;
      border-bottom: 1px solid #ddd;
      padding-bottom: 10px;
      margin-bottom: 10px;
      overflow-x: auto;
      white-space: nowrap;
      display: flex;
      flex-direction: row;
      align-items: center;
  }
  .sidebar[style*="width: 60px;"] {
      width: 100%;
  }
  .sidebar-toggle-button {
      display: none; /* Hide toggle on small screens */
  }
  .navitem {
      flex-shrink: 0;
      text-align: center;
      padding: 8px 15px;
      margin-bottom: 0;
      border-radius: 5px;
  }
  .navitem svg {
      margin-right: 0;
  }
  .navitem .navitem-text {
      display: inline;
      margin-left: 5px;
  }
  #content {
      margin-left: 0;
      margin-top: 50px;
      min-height: auto;
  }
  .chart-title {
      text-align: center;
  }
}

/* KPI Card Styles - Enhanced */
.kpi-card {
  background: #ffffff;
  /* border-left: 6px solid var(--primary-color); */
  border-radius: 12px;
  padding: 1.5rem;
  min-height: 150px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  transition: all 0.3s ease;
  margin-bottom: 20px;
  box-shadow: 0 4px 6px rgba(0,0,0,0.1);
}

.kpi-card:hover {
  transform: translateY(-5px);
  box-shadow: 0 8px 15px rgba(0,0,0,0.1);
}

.kpi-card h5 {
  font-size: 1.2rem;
  margin: 0;
  color: #555;
  margin-bottom: 15px;
}

.kpi-card h2 {
  margin: 0;
  font-weight: bold;
  color: #222;
  margin-bottom: 10px;
  font-size: 2rem;
}

.filter-panel {
  position: sticky;
  top: 30px;
  z-index: 1000;
  background-color: white;
  border-radius: 10px;
  padding: 15px;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
  margin-bottom: 20px;
}

